--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Torres de Hanoi</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="stack_icon_151083.png" />
 </head>
 <body>
 
