--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="container">
     <section class="controls">
       <h2>Salón de la Fama</h2>
-      <h3>Top 10 puntajes</h3>
+      <h3 id="recordsTitle">Top 10 puntajes</h3>
       
       <div class="records-controls">
         <div class="filter-group"> 
@@ -94,11 +94,16 @@
           <button id="sortMovesBtn" class="sort-button active">Ordenar por Movimientos</button>
           <button id="sortTimeBtn" class="sort-button">Ordenar por Tiempo</button>
         </div>
+        <div class="limit-buttons">
+          <button id="limit10Btn" class="limit-button active">Top 10</button>
+          <button id="limit100Btn" class="limit-button">Top 100</button>
+        </div>
       </div>
 
       <table id="recordsTable" class="records-table">
         <thead>
           <tr>
+            <th>Pos.</th>
             <th>Nombre</th>
             <th>Movimientos</th>
             <th>Tiempo</th>
@@ -131,6 +136,7 @@
       <div id="modalInputGroup" class="modal-input-group">
         <label for="modalPlayerName">Ingrese Su Nombre:</label>
         <input type="text" id="modalPlayerName" placeholder="Ingresa tu nombre">
+        <p id="modalErrorMsg" class="modal-error"></p>
       </div>
       
       <div class="modal-buttons">
