--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <main class="container">
     <section class="controls">
-      <h1>Torres de Hanoi</h1>
+      <h1>TORRES DE HANOI</h1>
+      <label>by JONASS_APM</label>
       <div class="counters-wrapper">
         <div id="minMoveCounterPanel" class="move-counter-min">
           Movimientos Mínimos: <span id="minMoveCount">0</span>
